; ModuleID = '/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_cbc_mac.c_AES_CBC_MAC_Setkey.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_cbc_mac.c_AES_CBC_MAC_Setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aes_cbc_mac_ctx = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AES_CBC_MAC_Setkey(%struct.aes_cbc_mac_ctx* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.aes_cbc_mac_ctx*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.aes_cbc_mac_ctx* %0, %struct.aes_cbc_mac_ctx** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.aes_cbc_mac_ctx*, %struct.aes_cbc_mac_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.aes_cbc_mac_ctx, %struct.aes_cbc_mac_ctx* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = mul nsw i32 %11, 8
  %13 = call i32 @rijndaelKeySetupEnc(i32 %9, i32* %10, i32 %12)
  %14 = load %struct.aes_cbc_mac_ctx*, %struct.aes_cbc_mac_ctx** %4, align 8
  %15 = getelementptr inbounds %struct.aes_cbc_mac_ctx, %struct.aes_cbc_mac_ctx* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @rijndaelKeySetupEnc(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
